# rust-url-shortener

./: Cargo.toml  README.md
migrations/2022-04-30-054651_create_url/: up.sql
src/: lib.rs  main.rs  models.rs  ops.rs  schema.rs
src/ops/: show_urls.rs  url_ops.rs
