[package]
name = "rust_url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.9"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.diesel]
features = ["postgres", "r2d2", "chrono"]
version = "1.4.8"